Standard distribution finalised

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600154065336",
+   "name": "python_defaultSpec_1600408037112",
    "display_name": "Python 3.8.3 64-bit"
   }
  },
@@ -22,24 +22,52 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Automating M248\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "A random variable is modelled as $X \\sim B(8,0.2)$.\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import automateM248 as m248"
+    "import automateM248 as m248\n",
+    "\n",
+    "# Declares the obj.\n",
+    "# testBinomial = m248.Binomial(5, 0.5)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
    "source": [
-    "testBinomial = m248.Binomial(5, 0.75)"
-   ]
+    "## Calculating probabilities\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Options: Please enter the option number for the form the probability takes\n",
+    "\n",
+    "1. $P(X = x)$\n",
+    "2. $P(X \\leq x)$\n",
+    "3. $P(X < x)$\n",
+    "4. $P(X \\geq x)$\n",
+    "5. $P(X > x)$\n",
+    "6. $P(x_{1} \\leq X \\leq x_{2})$\n",
+    "7. $P(x_{1} < X \\leq x_{2})$\n",
+    "8. $P(x_{1} \\leq X < x_{2})$\n",
+    "9. $P(x_{1} < X < x_{2})$\n",
+    "\n",
+    "or enter 0. to Quit\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -49,8 +77,19 @@
    },
    "outputs": [],
    "source": [
-    "# testBinomial.displayPMF()"
+    "# testBinomial.calculateProbability()"
    ]
+  },
+  {
+   "source": [
+    "## Describing the distribution\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Calculate the *mean*, *variance*, and *standard distribution* of the distribution"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -58,78 +97,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": [
-    "# testBinomial.displayCDF()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# testBinomial.displayMean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# testBinomial.displayVariance()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# testBinomial.displayStdDev()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# testBinomial.displaySummary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": []
-   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "P(X = 5) = 0.237305\n"
+     "text": "Summary statistics of the distribution\n-----\nE(X) = 2.5\nV(X) = 1.25\nS(X) = 1.118\n"
     }
    ],
    "source": [
-    "testBinomial.getP(5)"
+    "testBinomial.displaySummary()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
