--- a/main.ipynb
+++ b/main.ipynb
@@ -25,25 +25,33 @@
    "source": [
     "# Automating M248\n",
     "\n",
-    "-----\n",
-    "\n",
-    "A random variable is modelled as $X \\sim B(8,0.2)$.\n",
-    "\n"
+    "-----\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import automateM248 as m248\n",
+    "Built with Python 3.8.3\n",
     "\n",
-    "# Declares the obj.\n",
-    "# testBinomial = m248.Binomial(5, 0.5)"
-   ]
+    "Uses variable typing\n",
+    "\n",
+    "Tested in VSCode \n",
+    "\n",
+    "-----\n",
+    "\n",
+    "Generates a distribution with the given parameters.\n",
+    "\n",
+    "Distributions currently supported:\n",
+    "\n",
+    "- Binomial (`Binomial`)\n",
+    "- Geometric (`Geometric`)\n",
+    "- Poisson (`Poisson`)\n",
+    "- Discrete Uniform (`DiscreteUniform`)\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -51,34 +59,32 @@
     "\n",
     "-----\n",
     "\n",
-    "Options: Please enter the option number for the form the probability takes\n",
+    "```python\n",
+    "distribution.calculateProbability()\n",
+    "```\n",
     "\n",
-    "1. $P(X = x)$\n",
-    "2. $P(X \\leq x)$\n",
-    "3. $P(X < x)$\n",
-    "4. $P(X \\geq x)$\n",
-    "5. $P(X > x)$\n",
-    "6. $P(x_{1} \\leq X \\leq x_{2})$\n",
-    "7. $P(x_{1} < X \\leq x_{2})$\n",
-    "8. $P(x_{1} \\leq X < x_{2})$\n",
-    "9. $P(x_{1} < X < x_{2})$\n",
+    "Launches a loop, where: \n",
     "\n",
-    "or enter 0. to Quit\n",
-    "\n"
+    "1. the probability interval is clarified\n",
+    "2. variables for $X$ are defined.\n",
+    "\n",
+    "Please enter the number corresponding to the desired probability interval:\n",
+    "\n",
+    "| Option | Interval                     |\n",
+    "|--------|------------------------------|\n",
+    "| 0      | Quit                         |\n",
+    "| 1      | $P(X = x)$                   |\n",
+    "| 2      | $P(X \\leq x)$                |\n",
+    "| 3      | $P(X < x)$                   |\n",
+    "| 4      | $P(X \\geq x)$                |\n",
+    "| 5      | $P(X > x)$                   |\n",
+    "| 6      | $P(x_{1} \\leq X \\leq x_{2})$ |\n",
+    "| 7      | $P(x_{1} < X \\leq x_{2})$    |\n",
+    "| 8      | $P(x_{1} \\leq X < x_{2})$    |\n",
+    "| 9      | $P(x_{1} < X < x_{2})$       |\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# testBinomial.calculateProbability()"
-   ]
   },
   {
    "source": [
@@ -86,26 +92,56 @@
     "\n",
     "-----\n",
     "\n",
-    "Calculate the *mean*, *variance*, and *standard distribution* of the distribution"
+    "```python\n",
+    "distribution.displaySummary()\n",
+    "```\n",
+    "\n",
+    "Returns the **mean**, **variance**, and **standard distribution** of the distribution\n",
+    "\n",
+    "-----\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import automateM248 as m248\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declare the distribution\n",
+    "# distribution = m248.Binomial(5, 0.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Summary statistics of the distribution\n-----\nE(X) = 2.5\nV(X) = 1.25\nS(X) = 1.118\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "testBinomial.displaySummary()"
+    "# distribution.calculateProbability()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# distribution.displaySummary()"
    ]
   }
  ]
