Clean up, expanded README

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600408037112",
+   "name": "python_defaultSpec_1600414614119",
    "display_name": "Python 3.8.3 64-bit"
   }
  },
@@ -32,11 +32,9 @@
   },
   {
    "source": [
-    "Built with Python 3.8.3\n",
+    "Built with Python 3.8.3. Uses variable typing\n",
     "\n",
-    "Uses variable typing\n",
-    "\n",
-    "Tested in VSCode \n",
+    "Built and tested in VSCode \n",
     "\n",
     "-----\n",
     "\n",
@@ -44,10 +42,10 @@
     "\n",
     "Distributions currently supported:\n",
     "\n",
-    "- Binomial (`Binomial`)\n",
-    "- Geometric (`Geometric`)\n",
-    "- Poisson (`Poisson`)\n",
-    "- Discrete Uniform (`DiscreteUniform`)\n",
+    "- Binomial (`Binomial(n, p)`)\n",
+    "- Geometric (`Geometric(p)`)\n",
+    "- Poisson (`Poisson(mu)`)\n",
+    "- Discrete Uniform (`DiscreteUniform(m, n)`)\n",
     "\n"
    ],
    "cell_type": "markdown",
@@ -119,7 +117,7 @@
    "outputs": [],
    "source": [
     "# Declare the distribution\n",
-    "# distribution = m248.Binomial(5, 0.5)\n"
+    "distribution = m248.Binomial(5, 0.3)\n"
    ]
   },
   {
@@ -130,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "# distribution.calculateProbability()"
+    "distribution.calculateProbability()"
    ]
   },
   {
@@ -141,8 +139,15 @@
    },
    "outputs": [],
    "source": [
-    "# distribution.displaySummary()"
+    "distribution.displaySummary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
