Inititate Ch2 computer handbook

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600414614119",
+   "name": "python_defaultSpec_1600497500715",
    "display_name": "Python 3.8.3 64-bit"
   }
  },
@@ -53,6 +53,23 @@
   },
   {
    "source": [
+    "## Describing the distribution\n",
+    "\n",
+    "-----\n",
+    "\n",
+    "```python\n",
+    "distribution.displaySummary()\n",
+    "```\n",
+    "\n",
+    "Returns the **mean**, **variance**, and **standard distribution** of the distribution\n",
+    "\n",
+    "-----\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## Calculating probabilities\n",
     "\n",
     "-----\n",
@@ -85,25 +102,8 @@
    "metadata": {}
   },
   {
-   "source": [
-    "## Describing the distribution\n",
-    "\n",
-    "-----\n",
-    "\n",
-    "```python\n",
-    "distribution.displaySummary()\n",
-    "```\n",
-    "\n",
-    "Returns the **mean**, **variance**, and **standard distribution** of the distribution\n",
-    "\n",
-    "-----\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,34 +112,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Summary statistics of the distribution\n--------------------------------------\nE(X) = 2.0\nV(X) = 1.8\nS(X) = 1.3416\n"
+    }
+   ],
    "source": [
     "# Declare the distribution\n",
-    "distribution = m248.Binomial(5, 0.3)\n"
+    "distribution = m248.Binomial(20,0.1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "P(X > 15) = 0.0\n"
+    }
+   ],
    "source": [
+    "# Calculating a probability\n",
     "distribution.calculateProbability()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "distribution.displaySummary()"
    ]
   },
   {
