Added exponential class

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600497500715",
-   "display_name": "Python 3.8.3 64-bit"
+   "name": "Python 3.8.3 64-bit",
+   "display_name": "Python 3.8.3 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -103,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import automateM248 as m248\n"
+    "import automateM248 as m248"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -120,17 +125,20 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Summary statistics of the distribution\n--------------------------------------\nE(X) = 2.0\nV(X) = 1.8\nS(X) = 1.3416\n"
+     "text": "Summary statistics of the distribution\n--------------------------------------\nE(X) = 2.5\nV(X) = 2.5\nS(X) = 1.5811\n"
     }
    ],
    "source": [
+    "# declare L for the exp distribution\n",
+    "L: float = 0.5\n",
+    "\n",
     "# Declare the distribution\n",
-    "distribution = m248.Binomial(20,0.1)\n"
+    "distribution = m248.Poisson(2.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -138,11 +146,10 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "P(X > 15) = 0.0\n"
+     "text": "P(X = 0) = 0.082085\n"
     }
    ],
    "source": [
-    "# Calculating a probability\n",
     "distribution.calculateProbability()"
    ]
   },
