--- a/_ProbabilityCalculator/main.ipynb
+++ b/_ProbabilityCalculator/main.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# Automating M248\n",
+    "# Automate M248\n",
     "\n",
     "-----\n"
    ],
@@ -51,57 +51,8 @@
     "- Geometric (`Geometric(p)`)\n",
     "- Poisson (`Poisson(mu)`)\n",
     "- Discrete Uniform (`DiscreteUniform(m, n)`)\n",
+    "- Exponential (`Exponential(lambda)`)\n",
     "\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "## Describing the distribution\n",
-    "\n",
-    "-----\n",
-    "\n",
-    "```python\n",
-    "distribution.displaySummary()\n",
-    "```\n",
-    "\n",
-    "Returns the **mean**, **variance**, and **standard distribution** of the distribution\n",
-    "\n",
-    "-----\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "## Calculating probabilities\n",
-    "\n",
-    "-----\n",
-    "\n",
-    "```python\n",
-    "distribution.calculateProbability()\n",
-    "```\n",
-    "\n",
-    "Launches a loop, where: \n",
-    "\n",
-    "1. the probability interval is clarified\n",
-    "2. variables for $X$ are defined.\n",
-    "\n",
-    "Please enter the number corresponding to the desired probability interval:\n",
-    "\n",
-    "| Option | Interval                     |\n",
-    "|--------|------------------------------|\n",
-    "| 0      | Quit                         |\n",
-    "| 1      | $P(X = x)$                   |\n",
-    "| 2      | $P(X \\leq x)$                |\n",
-    "| 3      | $P(X < x)$                   |\n",
-    "| 4      | $P(X \\geq x)$                |\n",
-    "| 5      | $P(X > x)$                   |\n",
-    "| 6      | $P(x_{1} \\leq X \\leq x_{2})$ |\n",
-    "| 7      | $P(x_{1} < X \\leq x_{2})$    |\n",
-    "| 8      | $P(x_{1} \\leq X < x_{2})$    |\n",
-    "| 9      | $P(x_{1} < X < x_{2})$       |\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -117,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -125,20 +76,17 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Summary statistics of the distribution\n--------------------------------------\nE(X) = 2.5\nV(X) = 2.5\nS(X) = 1.5811\n"
+     "text": "Summary statistics of the distribution\n--------------------------------------\nE(X) = 0.3333\nV(X) = 0.1111\nS(X) = 0.3333\n"
     }
    ],
    "source": [
-    "# declare L for the exp distribution\n",
-    "L: float = 0.5\n",
-    "\n",
     "# Declare the distribution\n",
-    "distribution = m248.Poisson(2.5)"
+    "distribution = m248.Exponential(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -146,11 +94,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "P(X = 0) = 0.082085\n"
+     "text": "Probability range of selection\n---------------------------------------\nP(0.3333 &lt;= X &lt;= 1) = 0.318092\n"
     }
    ],
    "source": [
-    "distribution.calculateProbability()"
+    "# Calculate a probability\n",
+    "distribution.calculateProbability(x1=1/3, x2=1)"
    ]
   },
   {
