--- a/_ProbabilityCalculator/main.ipynb
+++ b/_ProbabilityCalculator/main.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -76,17 +76,19 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Summary statistics of the distribution\n--------------------------------------\nE(X) = 0.3333\nV(X) = 0.1111\nS(X) = 0.3333\n"
+     "text": [
+      "Summary statistics of the distribution\n--------------------------------------\nE(X) = 2.25\nV(X) = 1.9125\nS(X) = 1.3829\n"
+     ]
     }
    ],
    "source": [
     "# Declare the distribution\n",
-    "distribution = m248.Exponential(3)"
+    "distribution = m248.Binomial(15,0.15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -94,12 +96,14 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Probability range of selection\n---------------------------------------\nP(0.3333 &lt;= X &lt;= 1) = 0.318092\n"
+     "text": [
+      "Various probability ranges of selection\n---------------------------------------\nP(X = 3) = 0.21843\nP(X <= 3) = 0.822655\nP(X < 3) = 0.604225\nP(X >= 3) = 0.395775\nP(X > 3) = 0.177345\n"
+     ]
     }
    ],
    "source": [
     "# Calculate a probability\n",
-    "distribution.calculateProbability(x1=1/3, x2=1)"
+    "distribution.calculateProbability(x1=3)"
    ]
   },
   {
