moving to sqlite3

--- a/notebooks/01_SQLite3.ipynb
+++ b/notebooks/01_SQLite3.ipynb
@@ -36,30 +36,12 @@
    "metadata": {}
   },
   {
-   "source": [
-    "## Tasks\n",
-    "\n",
-    "To save storing 100s of csv files...\n",
-    "\n",
-    "- [X] Create an sqlite3 db to hold the files\n",
-    "    - Done, see ./data/sets.db3\n",
-    "- Write a series of functions that will\n",
-    "    - [] Create a connection to the database\n",
-    "    - [] Execute an sqlite3 query\n",
-    "    - [] Return data in an array\n",
-    "    - [] Return ata to notebook as a `pd.DataFrame`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dbM248 as query\n",
-    "import pandas as pd"
+    "import queryM248 as query"
    ]
   },
   {
@@ -68,16 +50,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = query.Database(\"sets\")  # connects to the db"
+    "# Connection to the database\n",
+    "db = query.Database(\"sets\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Table list\n----------\nDistance\nMembership\nMemory\nResponseInhibition\nTattoos\n"
+     ]
+    }
+   ],
+   "source": [
+    "db.listTables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "test.table(\"distance\")  # executes \"SELECT * FROM tbl\" on db"
+    "# Queries a table in db\n",
+    "table = query.Table(\"memory\", db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exports the sqlite3 table to a DataFrame\n",
+    "df = table.toDF()"
    ]
   },
   {
@@ -85,9 +96,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.DataFrame(columns=test.columnTitles)"
-   ]
+   "source": []
   }
  ]
 }
