Refactored test nb

--- a/notebooks/01_TestingQueryM248.ipynb
+++ b/notebooks/01_TestingQueryM248.ipynb
@@ -28,67 +28,53 @@
  "cells": [
   {
    "source": [
-    "# Speccing functions for `sqlite`\n",
+    "# Testing `queryM248`\n",
     "\n",
-    "-----\n"
+    "-----\n",
+    "\n",
+    "    2020-10-09"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import queryM248 as query"
+    "import queryM248 as query\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connection to the database\n",
-    "db = query.Database(\"sets\")"
+    "db = query.Database(\"sets\")  # Connection to the database\n",
+    "table = query.Table(\"Distance\", db)  # Queries a table in db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Table list\n----------\nDistance\nMembership\nMemory\nResponseInhibition\nTattoos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.listTables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Queries a table in db\n",
-    "table = query.Table(\"memory\", db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exports the sqlite3 table to a DataFrame\n",
-    "df = table.toDF()"
+    "df = table.toDF()\n",
+    "df.head()"
    ]
   },
   {
