--- a/notebooks/01_TestingQueryM248.ipynb
+++ b/notebooks/01_TestingQueryM248.ipynb
@@ -43,8 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import queryM248 as query\n",
-    "import pandas as pd"
+    "import queryM248 as query"
    ]
   },
   {
@@ -54,9 +53,7 @@
    "outputs": [],
    "source": [
     "# Create connection to the database\n",
-    "db = query.Database(\"sets\")\n",
-    "# Queries a table in db\n",
-    "table = query.Table(\"Distance\", db)"
+    "db = query.Database(\"sets\")"
    ]
   },
   {
@@ -73,12 +70,33 @@
     }
    ],
    "source": [
+    "# Testing connection to db\n",
     "db.listTables()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query a table in db\n",
+    "table = query.Table(\"Distance\", db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exports the table to a DataFrame\n",
+    "df = table.toDF()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,21 +113,42 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Road</th>\n      <th>Map</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10.7</td>\n      <td>9.5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11.7</td>\n      <td>9.8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6.5</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>25.6</td>\n      <td>19.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>29.4</td>\n      <td>23.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 6
     }
    ],
    "source": [
-    "# exports the sqlite3 table to a DataFrame\n",
-    "df = table.toDF()\n",
+    "# Testing the DataFrame\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            Road        Map\n",
+       "count  20.000000  20.000000\n",
+       "mean   20.855000  16.130000\n",
+       "std     9.611094   7.337151\n",
+       "min     6.500000   4.800000\n",
+       "25%    13.575000  11.000000\n",
+       "50%    19.050000  14.900000\n",
+       "75%    28.850000  21.775000\n",
+       "max    40.500000  28.200000"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Road</th>\n      <th>Map</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>20.000000</td>\n      <td>20.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>20.855000</td>\n      <td>16.130000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>9.611094</td>\n      <td>7.337151</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>6.500000</td>\n      <td>4.800000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>13.575000</td>\n      <td>11.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>19.050000</td>\n      <td>14.900000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>28.850000</td>\n      <td>21.775000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>40.500000</td>\n      <td>28.200000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   }
  ]
 }
