--- a/notebooks/T01_QueryM248.ipynb
+++ b/notebooks/T01_QueryM248.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# Testing `queryM248`\n",
+    "# T1. Testing `queryM248`\n",
     "\n",
     "-----\n",
     "\n",
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import queryM248 as query"
+    "import M248.query as query"
    ]
   },
   {
