--- a/notebooks/A05_SamplesModelsDiscreteData.ipynb
+++ b/notebooks/A05_SamplesModelsDiscreteData.ipynb
@@ -32,21 +32,17 @@
     "\n",
     "-----\n",
     "\n",
-    "Visualising the *settling down* phenomenon.\n",
-    "\n",
-    "> *In a long sequence of repetitions of a study or experiment, bar charts and histograms of samples tend to settle down towards probability distributions*\n",
-    "\n",
-    "Two support functions used: `rollDie()` and `simulateDieRolls()`\n",
-    "\n",
-    "`simulateDieRolls(arg int)`\n",
-    ": Invokes `rollDie(arg int)`, which returns a list of `arg` simulations of a dice roll.\n",
-    "The p.d.f. is then plotted by `seaborn`.\n"
+    "    2020-10-08"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "source": [],
+   "source": [
+    "Visualising the *settling down* phenomenon.\n",
+    "\n",
+    "> *In a long sequence of repetitions of a study or experiment, bar charts and histograms of samples tend to settle down towards probability distributions*"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
