--- a/notebooks/T01_query.ipynb
+++ b/notebooks/T01_query.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "source": [
-    "# T1. Testing `queryM248`\n",
+    "# T1. Testing `query`\n",
     "\n",
     "-----\n",
     "\n",
