--- a/notebooks/T02_probability.ipynb
+++ b/notebooks/T02_probability.ipynb
@@ -28,47 +28,27 @@
  "cells": [
   {
    "source": [
-    "# Automate M248\n",
-    "\n",
-    "-----\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "Built with Python 3.8.3. Uses variable typing\n",
-    "\n",
-    "Built and tested in VSCode \n",
+    "# T02. Testing `probability`\n",
     "\n",
     "-----\n",
     "\n",
-    "Generates a distribution with the given parameters.\n",
-    "\n",
-    "Distributions currently supported:\n",
-    "\n",
-    "- Binomial (`Binomial(n, p)`)\n",
-    "- Geometric (`Geometric(p)`)\n",
-    "- Poisson (`Poisson(mu)`)\n",
-    "- Discrete Uniform (`DiscreteUniform(m, n)`)\n",
-    "- Exponential (`Exponential(lambda)`)\n",
-    "\n"
+    "    2020-10-09"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import automateM248 as m248"
+    "import M248.probability as p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -83,12 +63,12 @@
    ],
    "source": [
     "# Declare the distribution\n",
-    "distribution = m248.Binomial(15,0.15)"
+    "distribution = p.Binomial(15,0.15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
