--- a/notebooks/T01_query.ipynb
+++ b/notebooks/T01_query.ipynb
@@ -32,19 +32,13 @@
     "\n",
     "-----\n",
     "\n",
-    "    2020-10-09"
+    "    2020-10-09\n",
+    "\n",
+    "Note, the path to the database folder is currently hard coded in the Class (`./data/`).\n",
+    "It can be modified by updating the `self.db` variable in the `Database.__init__` Class constructor."
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import M248.query as query"
-   ]
   },
   {
    "cell_type": "code",
