Updated test example

--- a/notebooks/X01_ProbCalcCtsVar.ipynb
+++ b/notebooks/X01_ProbCalcCtsVar.ipynb
@@ -77,57 +77,57 @@
     "\n",
     "> Source: Unit 2, Exercise 10\n",
     "\n",
-    "A continuous random variable $X$ with range $(3,6)$ has p.d.f. given by\n",
+    "A continuous random variable $X$ with range $(0,5)$ has p.d.f. given by\n",
     "\n",
     "$$\n",
-    "f(x) = \\frac{1}{30}(10x - x^{2} - 14), \\hspace{3mm} \\text{for } x \\in (3,6)\n",
+    "f(x) = 0.048x(5 - x), \\hspace{3mm} \\text{for } x \\in (0,5)\n",
     "$$\n",
     "\n",
     "Calculate\n",
     "\n",
-    "a. $P(X<4)$\n",
+    "a. $P(X<2)$\n",
     "\n",
-    "b. $P(X>4)$\n",
+    "b. $P(X>2)$\n",
     "\n",
     "c. Check answers to (a) and (b) sum to 1? (sanity check)\n",
     "\n",
-    "c. $P(4<X<5)$"
+    "c. $P(2.5<X<4.5)$"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# integrate f(x)\n",
     "def integrand(x):\n",
-    "    return (1/30) * (10*x - x**2 - 14)"
+    "    return 0.048 * x * (5 - x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.288889"
+       "0.352"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 8
     }
    ],
    "source": [
-    "# (a)\n",
+    "# (a) P(X<2)\n",
     "# define integration range\n",
-    "x1: float = 3  # L\n",
-    "x2: float = 4\n",
+    "x1: float = 0  # L\n",
+    "x2: float = 2\n",
     "\n",
     "Ia = quad(integrand, x1, x2)\n",
     "round(Ia[0], 6)"
@@ -135,25 +135,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.711111"
+       "0.648"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 9
     }
    ],
    "source": [
-    "# (b)\n",
+    "# (b) P(X>2)\n",
     "# define integration range\n",
-    "x3: float = 4\n",
-    "x4: float = 6\n",
+    "x3: float = 2\n",
+    "x4: float = 5\n",
     "\n",
     "Ib = quad(integrand, x3, x4)\n",
     "round(Ib[0], 6)"
@@ -161,50 +161,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1.0"
+       "True"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 13
     }
    ],
    "source": [
-    "# (c)\n",
-    "Ia[0] + Ib[0]"
+    "# (c) Sanity check: Does P(X<2) + P(X>2) = 1?\n",
+    "sanity: bool = Ia[0] + Ib[0] == 1\n",
+    "sanity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.355556"
+       "0.472"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 14
     }
    ],
    "source": [
     "# (d)\n",
     "# define integration range\n",
-    "x5: float = 4  # L\n",
-    "x6: float = 5\n",
+    "x5: float = 2.5  # L\n",
+    "x6: float = 4.5\n",
     "\n",
     "Id = quad(integrand, x5, x6)\n",
     "round(Id[0], 6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
