--- a/notebooks/X01_ProbCalcCtsVar.ipynb
+++ b/notebooks/X01_ProbCalcCtsVar.ipynb
@@ -79,35 +79,31 @@
     "\n",
     "$$\n",
     "f(x) = 0.048x(5 - x), \\hspace{3mm} \\text{for } x \\in (0,5)\n",
-    "$$\n",
-    "\n",
-    "Calculate\n",
-    "\n",
-    "a. $P(X<2)$\n",
-    "\n",
-    "b. $P(X>2)$\n",
-    "\n",
-    "c. Check answers to (a) and (b) sum to 1? (sanity check)\n",
-    "\n",
-    "c. $P(2.5<X<4.5)$"
+    "$$\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# integrate f(x)\n",
     "def integrand(x):\n",
     "    return 0.048 * x * (5 - x)"
    ]
   },
   {
+   "source": [
+    "Calculate $P(X<2)$\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,11 +114,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 3
     }
    ],
    "source": [
-    "# (a) P(X<2)\n",
     "# define integration range\n",
     "x1: float = 0  # L\n",
     "x2: float = 2\n",
@@ -132,8 +127,15 @@
    ]
   },
   {
+   "source": [
+    "Calculate $P(X>2)$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,11 +146,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 4
     }
    ],
    "source": [
-    "# (b) P(X>2)\n",
     "# define integration range\n",
     "x3: float = 2\n",
     "x4: float = 5\n",
@@ -158,8 +159,15 @@
    ]
   },
   {
+   "source": [
+    "Sanity check: Does the answers to first two questions sum to 1?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,47 +178,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 5
     }
    ],
    "source": [
-    "# (c) Sanity check: Does P(X<2) + P(X>2) = 1?\n",
+    "# Sanity check: Does P(X<2) + P(X>2) = 1?\n",
     "sanity: bool = Ia[0] + Ib[0] == 1\n",
     "sanity"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.472"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
-   "source": [
-    "# (d)\n",
-    "# define integration range\n",
-    "x5: float = 2.5  # L\n",
-    "x6: float = 4.5\n",
-    "\n",
-    "Id = quad(integrand, x5, x6)\n",
-    "round(Id[0], 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
