--- a/notebooks/T01_query.ipynb
+++ b/notebooks/T01_query.ipynb
@@ -28,69 +28,25 @@
  "cells": [
   {
    "source": [
-    "# T1. Testing `query`\n",
+    "# T1. Retrieving a table of an SQLite3 as a `pd.DataFrame`\n",
     "\n",
     "-----\n",
     "\n",
-    "    2020-10-09\n",
-    "\n",
-    "Note, the path to the database folder is currently hard coded in the Class (`./data/`).\n",
-    "It can be modified by updating the `self.db` variable in the `Database.__init__` Class constructor."
+    "    2020-10-09"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Testing the `M248.query` script."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create connection to the database\n",
-    "db = query.Database(\"sets\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Table list\n----------\nDistance\nMembership\nMemory\nResponseInhibition\nTattoos\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Testing connection to db\n",
-    "db.listTables()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Query a table in db\n",
-    "table = query.Table(\"Distance\", db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# exports the table to a DataFrame\n",
-    "df = table.toDF()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -107,41 +63,23 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Road</th>\n      <th>Map</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10.7</td>\n      <td>9.5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11.7</td>\n      <td>9.8</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6.5</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>25.6</td>\n      <td>19.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>29.4</td>\n      <td>23.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 1
     }
    ],
    "source": [
+    "import M248.query as query\n",
+    "\n",
+    "# Create connection to the database\n",
+    "db = query.Database()\n",
+    "\n",
+    "# Query a table in the database\n",
+    "a_table = query.Table(\"Distance\", db)\n",
+    "\n",
+    "# export the table to a DataFrame\n",
+    "df = a_table.toDF()\n",
+    "\n",
     "# Testing the DataFrame\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "            Road        Map\n",
-       "count  20.000000  20.000000\n",
-       "mean   20.855000  16.130000\n",
-       "std     9.611094   7.337151\n",
-       "min     6.500000   4.800000\n",
-       "25%    13.575000  11.000000\n",
-       "50%    19.050000  14.900000\n",
-       "75%    28.850000  21.775000\n",
-       "max    40.500000  28.200000"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Road</th>\n      <th>Map</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>20.000000</td>\n      <td>20.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>20.855000</td>\n      <td>16.130000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>9.611094</td>\n      <td>7.337151</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>6.500000</td>\n      <td>4.800000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>13.575000</td>\n      <td>11.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>19.050000</td>\n      <td>14.900000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>28.850000</td>\n      <td>21.775000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>40.500000</td>\n      <td>28.200000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "df.describe()"
    ]
   }
  ]
