Update typo in comment

--- a/notebooks/T01_query.ipynb
+++ b/notebooks/T01_query.ipynb
@@ -69,10 +69,10 @@
    "source": [
     "import M248.query as query\n",
     "\n",
-    "# Create connection to the database\n",
+    "# create connection to the database\n",
     "db = query.Database()\n",
     "\n",
-    "# Query a table in the database\n",
+    "# query a table in the database\n",
     "a_table = query.Table(\"Distance\", db)\n",
     "\n",
     "# export the table to a DataFrame\n",
