Small updates to code

--- a/notebooks/A02_PlottingContinuousVariables.ipynb
+++ b/notebooks/A02_PlottingContinuousVariables.ipynb
@@ -12,13 +12,6 @@
    ]
   },
   {
-   "source": [
-    "## 1. Import modules"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,9 +24,9 @@
   },
   {
    "source": [
-    "## 2. Data import\n",
+    "## 1. Data import\n",
     "\n",
-    "Here we connect to the `sets` database, query the table `membership`, and then send the query to a `DataFrame`"
+    "We use [`M248.query`](https://github.com/ljk233/AutomatingM248/blob/master/notebooks/T01_query.ipynb) to import the dataset from our M248 database."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -44,21 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect to the db\n",
-    "db = query.Database(\"sets\")\n",
-    "\n",
-    "# query the table\n",
+    "db = query.Database()\n",
     "table = query.Table(\"Membership\", db)\n",
-    "\n",
-    "# declare the DataFrame\n",
     "df1 = table.toDF()"
    ]
   },
   {
    "source": [
-    "## 3. Data wrangling\n",
-    "\n",
-    "Next we check the data has come through as expected, specifically the data type."
+    "## 2. Data wrangling"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -86,38 +72,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "The percentage columns has come through as an `object`, so we need to recast percentage from `object` $\\to$ `float`"
+    "# recast percentage to float\n",
+    "df1 = df1.astype({'Percentage': 'float'})"
+   ]
+  },
+  {
+   "source": [
+    "## 3. Data visualisation"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Percentage    float64\n",
-       "dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
    "source": [
-    "# recast percentage to float\n",
-    "df1 = df1.astype({'Percentage': 'float'})\n",
-    "df1.dtypes"
-   ]
-  },
-  {
-   "source": [
-    "## 3. Plot the default histogram"
+    "### Plot a histogram"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -151,18 +124,16 @@
     }
    ],
    "source": [
-    "# Declare the defaults histogram\n",
     "fig1 = sns.histplot(df1,\n",
-    "                   x=\"Percentage\")\n",
+    "                    x=\"Percentage\")\n",
     "\n",
-    "# Label ax1 and y-axis\n",
     "fig1.set(ylabel=\"Frequency\",\n",
     "         title=\"Adult Membership of Sports Club by Percentage\")"
    ]
   },
   {
    "source": [
-    "## 4. Plot another histogram with custom bin widths"
+    "### Histogram with different bin widths"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -201,7 +172,6 @@
     "                    x=\"Percentage\",\n",
     "                    binwidth=1)\n",
     "\n",
-    "# Label fig and y-axis\n",
     "fig2.set(ylabel=\"Frequency\",\n",
     "         title=\"Adult Membership of Sports Club by Percentage\")"
    ]
@@ -210,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Plot a boxplot"
+    "### Plot a boxplot"
    ]
   },
   {
