Note on transfer()

--- a/notebooks/Z01_AccountMainMethod.ipynb
+++ b/notebooks/Z01_AccountMainMethod.ipynb
@@ -32,7 +32,20 @@
     "\n",
     "-----\n",
     "\n",
-    "An example of a Main method using [Account.py](https://github.com/ljk233/AutomatingM248/blob/master/notebooks/M250/Account.py).\n"
+    "An example of a Main method using [Account.py](https://github.com/ljk233/AutomatingM248/blob/master/notebooks/M250/Account.py).\n",
+    "\n",
+    "There are examples of\n",
+    "\n",
+    "- Instantiation\n",
+    "- Using setter and getter messages\n",
+    "- Messages\n",
+    "    - Message-send with no arguments\n",
+    "    - Message-send with arguments\n",
+    "    - Messages with no answers\n",
+    "    - Messages answers\n",
+    "- Objects\n",
+    "    - Sending messages to itself\n",
+    "    - Collaborating"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -201,7 +214,7 @@
   },
   {
    "source": [
-    "Example of a selection condition returning `True`"
+    "The message `debit()` is an example of a selection condition, followed by an objecy sending a message to itself (if condition is `True`)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -254,9 +267,111 @@
    ]
   },
   {
-   "source": [],
+   "source": [
+    "The message `transfer()` is an example of object collaboration."
+   ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "accountOne.getBalance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "200.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "accountTwo.getBalance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "accountTwo.transfer(accountOne, 50.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "accountOne.getBalance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "150.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "accountTwo.getBalance()"
+   ]
   }
  ]
 }
