Formatting and typos

--- a/notebooks/Z01_AccountMainMethod.ipynb
+++ b/notebooks/Z01_AccountMainMethod.ipynb
@@ -119,7 +119,7 @@
   {
    "source": [
     "Test message to check value.\n",
-    "Example of **message-sends**, with no arguments.\n",
+    "Example of **message-sends** with no arguments.\n",
     "There is a message-answer."
    ],
    "cell_type": "markdown",
@@ -147,8 +147,8 @@
   },
   {
    "source": [
-    "Examples of a message-sends, with arguments.\n",
-    "There are no message answers."
+    "Examples of a **message-sends with arguments**.\n",
+    "There are no **message answers**."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -186,7 +186,7 @@
   },
   {
    "source": [
-    "The message `credit()` is an example of a object sending a message to itself."
+    "The message `credit()` is an example of a object **sending a message to itself**."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -214,7 +214,7 @@
   },
   {
    "source": [
-    "The message `debit()` is an example of a selection condition, followed by an objecy sending a message to itself (if condition is `True`)"
+    "The message `debit()` is an example of a **selection condition**, followed by an object sending a message to itself (if condition is `True`)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -241,7 +241,7 @@
   },
   {
    "source": [
-    "Example of a selection condition returning `False`"
+    "Example of a **selection condition** returning `False`"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -268,7 +268,7 @@
   },
   {
    "source": [
-    "The message `transfer()` is an example of object collaboration."
+    "The message `transfer()` is an example of **object collaboration**."
    ],
    "cell_type": "markdown",
    "metadata": {}
