--- a/notebooks/A07_BinomialDistribution.ipynb
+++ b/notebooks/A07_BinomialDistribution.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "An examination consists of twenty multiple choice questions.\n",
     "For each question, the correct answer is one of five options.\n",
-    "The random variable $T$, which denotes the number of correct answers obtained by a student who guesses answers at random, has a binomial distribution $T ∼ B(20, 0.2)$."
+    "The random variable $T$ denotes the number of correct answers obtained by a student who guesses answers at random, has a binomial distribution $T \\sim B(20, 0.2)$."
    ],
    "cell_type": "markdown",
    "metadata": {}
